feat: add benefit operations console
